derive/test/compile_fail/enum_unlabeled_fields.stderr
error: unsupported attribute `unlabeled_fields` on enum
 --> compile_fail/enum_unlabeled_fields.rs:4:8
  |
4 | #[sval(unlabeled_fields)]
  |        ^^^^^^^^^^^^^^^^
